@@ -80,7 +80,7 @@ class StaplerDispatchValidatorTest {
         String[] urls = {"annotated/root", "groovy/root", "jelly/root", "whitelist/root"};
         for (String url : urls) {
             HtmlPage root = j.createWebClient().goTo(url);
-            assertEquals("Fragment", root.getElementById("frag").getChildNodes().get(0).getNodeValue());
+            assertEquals("Fragment", root.getElementById("frag").getChildNodes().getFirst().getNodeValue());
         }
     }
 
